# agentic-rag-system

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  RESEARCH_NOTES.md  app.py  docker-compose.yml  pyproject.toml
alaska-legal/: .python-version  answerer.py  app.py  chunker.py  embedder.py  ingest.py  parser.py  requirements.txt  retriever.py  validate_parser.py
config/: prompts.py  settings.py
scripts/: ingest.py  query.py
src/: main.py
src/graph/: builder.py  edges.py
src/graph/nodes/: __init__.py  evaluate.py  parse.py  plan.py  resolve.py  respond.py  retrieve.py  synthesize.py
src/ingestion/: chroma_loader.py  chunker.py  embedder.py  graph_builder.py  metadata.py  parser.py  pipeline.py  qdrant_loader.py
src/llm/: client.py  query_gen.py
src/retrieval/: __init__.py  chroma_client.py  neo4j_client.py  qdrant_client.py  reranker.py  shared.py  strategy.py
src/schema/: __init__.py  enums.py  models.py  state.py
src/tools/: __init__.py  cross_reference.py  graph_query.py  hierarchical_lookup.py  propositional_search.py  sub_question.py  vector_search.py
src/utils/: citations.py  logging.py  references.py
tests/: conftest.py
tests/test_graph/: test_edges.py  test_nodes.py
tests/test_ingestion/: test_chunker.py
tests/test_retrieval/: test_strategy.py
tests/test_tools/: test_vector_search.py
